SERVER-39180 Don't distribute chunks on `shardCollection` if the collection is not empty

(cherry picked from commit ec3a2060a3fbdd8808a39533b25e6b270ea95b28)